# R2X

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  .release-please-manifest.json  CHANGELOG.html  CHANGELOG.md  README.md  cliff.toml  conftest.py  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: dependabot.yml  labeler.yaml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: ci.yaml  commit.yaml  docs-build.yaml  labeler.yaml  release.yaml  workflow-quality.yaml
docs/source/: conf.py  index.md
docs/source/api/: models.md  plugins.md
src/r2x/: __init__.py  cli.py  cli_functions.py  config_models.py  enums.py  io.py  modifiers.py  plugin.py  runner.py  utils.py
src/r2x/_core/: __init__.py  base.py  dry_run.py  errors.py  reports.py  validation.py
src/r2x/common/: __init__.py  config.py  registry.py  time_series.py  types.py  utils.py
src/r2x/defaults/: pcm_defaults.json  plexos_input.json  plexos_output.json  reeds_india_input.json  reeds_india_mapping.json
src/r2x/exporter/: handler.py  plexos.py  utils.py
src/r2x/models/: __init__.py  core.py  costs.py  generators.py  named_tuples.py  services.py
src/r2x/parser/: reeds.py
src/r2x/plugins/: break_gens.py  pcm_defaults.py
src/r2x/templates/plugin/: cookiecutter.json
src/r2x/templates/plugin/{{ cookiecutter.plugin_name }}/: exporter.py  parser.py  plugin.py  pyproject.toml  sysmod.py
src/r2x/translations/: __init__.py
src/r2x/translations/plexos_to_sienna/: __init__.py  converters.py  mapping_loader.py  registry.py  translator.py  types.py  utils.py  validation.py
src/r2x/translations/plexos_to_sienna/config/: __init__.py  defaults.json
src/r2x/translations/plexos_to_sienna/mappings/: __init__.py  generator.py  storage.py  topology.py
src/r2x/translations/reeds_to_plexos/: __init__.py
src/r2x/translations/sienna_to_plexos/: __init__.py
src/r2x/upgrader/: __init__.py  psy4_to_psy5.py
tests/: __init__.py  conftest.py  test_context.py  test_context_methods.py  test_getters.py  test_getters_utils.py  test_hydro_pump_turbine.py  test_hydro_reservoir.py  test_models.py  test_modifiers.py  test_p2s_translation_validation.py  test_plugin_configs.py  test_r2p_getters.py  test_r2p_getters_utils.py  test_r2p_translation_validation.py  test_rule.py  test_rule_comparisson.py  test_rule_defaults.py  test_rule_execution.py  test_rule_integration.py  test_rule_registry.py  test_rules_validation.py  test_s2p_getters.py  test_s2p_getters_utils.py  test_s2p_translation_validation.py  test_validation.py  tests_r2p_translation_validation.py  tests_s2p_translation_validation.py
tests/fixtures/: __init__.py  components.py  context.py  five_bus_systems.py  profiles.py  reeds_systems.py  rules.py  time_series.py
tests/test_common/: __init__.py  test_config.py  test_registry.py  test_utils.py
tests/test_translations/: test_topology_translation.py
tests/test_translations/test_plexos_to_sienna/: __init__.py  test_converters.py  test_dry_run.py  test_mapping_loader.py  test_mappings.py  test_plugin.py  test_registry.py  test_translator.py  test_validation.py
tests/upgrader/: conftest.py  test_psy4_to_psy5.py
